Fix corsConfig